--- a/app-sim/conf/sysconfig.conf
+++ b/app-sim/conf/sysconfig.conf
@@ -2,6 +2,10 @@
 SMG_IP = 10.10.126.173
 SMG_PORT =7865
 
+[APP]
+#name =cdrEncryption
+name =test
+
 
 [LOG]
 #0:notset,10:debug,20:info,30:waring,40:error,50:critical
