--- a/app-sim/conf/sysconfig.conf
+++ b/app-sim/conf/sysconfig.conf
@@ -10,7 +10,7 @@ name =test
 #0:notset,10:debug,20:info,30:waring,40:error,50:critical
 Level = 10
 
-#0:houtai;1:stdout
+#0:log file;1:stdout
 Type = 1
 
 #time type
@@ -21,3 +21,6 @@ MaxBytes = 104857600
 
 #total backup log count
 BackupCount = 5
+
+#log file open with a or w
+Log module = w
